# Penguin-Engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  date.txt  main.cpp
include/glad/: glad.h
src/: glad.c  main.cpp
src/loader/: loader.cpp  loader.h  shaderLoader.cpp  shaderLoader.h
src/window/: window.cpp  window.h
